# copper

./: Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/libcopper/: Cargo.toml
crates/libcopper/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: kw.rs  lib.rs  multipliers.rs  names.rs  table.rs  token.rs  units.rs
libcopper/: Cargo.toml
libcopper/src/: lib.rs
src/: main - Copy.rs  main.rs
