[package]
name = "copper"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "cu"

[dependencies]
clap = { version = "4.6.1", default-features = false, features=["std", "derive", "help", "usage", "error-context"] }
libcopper = { version = "0.1.0", path = "libcopper" }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
