[package]
name = "copper"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "cu"

[dependencies]
clap = { version = "4.6.1", default-features = false, features=["std", "derive", "help", "usage", "error-context"] }
libcopper = { path = "../libcopper" }
