[package]
name = "copper"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "cu"

[dependencies]
clap = { version = "4.6.1", default-features = false, features=["std", "derive", "help", "usage", "error-context"] }
env_logger = { version = "0.11.10", default-features = false }
libcopper = { path = "../libcopper" }
log = { version = "0.4.33", default-features = false }
